--- a/task-03.html
+++ b/task-03.html
@@ -12,6 +12,12 @@
 
     <ul class="gallery"></ul>
 
+    <style>
+      img{
+        width: 50%;
+        height: 50vh;
+      }
+    </style>
     <script src="js/task-03.js" type="module"></script>
   </body>
 </html>
